Refactor rcl_* interface, add height and upstream tracker